[package]
name = "advent_of_code_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = true  # Enable Link Time Optimization
codegen-units = 1  # Reduce Parallel Code Generation Units to Increase Optimization
panic = "abort" # reduces binary size by 1 MiB